關於我們與feedbacK頁面調整

--- a/aboutus.html
+++ b/aboutus.html
@@ -80,10 +80,10 @@
                     <img src="picture/nutritionistimg/nutritionistall.jpg" alt="專業營養師團隊">
                 </div>
                 <p>
-                    在追求健康與美麗的道路上，vitaC 深信「簡約之道，Less is More」的真諦。如同我們精心挑選的每一項成分，我們的專業營養師團隊亦秉持著純粹、專業的精神，以簡潔明瞭的知識，引導你走向由內而外的健康美學。
-
-                    vitaC 的營養師團隊，由五位資深營養師組成。他們不僅擁有國家級營養師執照，更在臨床營養、保健食品諮詢、健康教育等領域累積了豐富的實務經驗。每一位營養師都對生命科學充滿熱忱，並持續精進專業知識，緊跟最新的營養學研究趨勢，為您提供最值得信賴的健康建議。
-                    
+                    在追求健康與美麗的道路上，vitaC 深信「簡約之道，Less is More」的真諦。如同我們精心挑選的每一項成分，我們的專業營養師團隊亦秉持著純粹、專業的精神，以簡潔明瞭的知識，引導你走向由內而外的健康美學。</br>
+                    </br>
+                    vitaC 的營養師團隊，由五位資深營養師組成。他們不僅擁有國家級營養師執照，更在臨床營養、保健食品諮詢、健康教育等領域累積了豐富的實務經驗。每一位營養師都對生命科學充滿熱忱，並持續精進專業知識，緊跟最新的營養學研究趨勢，為您提供最值得信賴的健康建議。</br>
+                    </br>
                     我們的團隊深知，現代人生活忙碌，往往在琳瑯滿目的健康資訊中迷失方向。因此，vitaC 的營養師們致力於將複雜的營養學知識，轉化為簡潔易懂的語言，透過專業的文章、貼心的諮詢，幫助你釐清保健觀念，選擇真正適合自己的產品。
                 </p>
             </div>
@@ -121,9 +121,9 @@
                     </div>
                     <div class="value-content">
                         <p>
-                        vitaC 深信，真正的健康源於純粹。我們摒棄過多不必要的添加物，例如人工色素、香料、防腐劑等，致力於提供成分簡單、直接有效的保健食品。我們的產品配方經過仔細篩選，僅選用對人體有益的關鍵成分，並以最精簡的方式呈現。這不僅降低了身體不必要的負擔，更能讓您清楚了解自己所攝取的每一份營養。
-
-                        Less is More」是 vitaC 對純粹的堅持。我們相信，透過單純的成分組合，更能發揮其天然的功效，讓身體自然吸收與利用。選擇 vitaC，您選擇的是一份對身體的尊重，一份回歸健康本質的承諾。我們以純粹的心，為您打造無負擔的健康體驗。
+                        vitaC 深信，真正的健康源於純粹。我們摒棄過多不必要的添加物，例如人工色素、香料、防腐劑等，致力於提供成分簡單、直接有效的保健食品。我們的產品配方經過仔細篩選，僅選用對人體有益的關鍵成分，並以最精簡的方式呈現。這不僅降低了身體不必要的負擔，更能讓您清楚了解自己所攝取的每一份營養。</br>
+                        </br>
+                        「Less is More」是 vitaC 對純粹的堅持。我們相信，透過單純的成分組合，更能發揮其天然的功效，讓身體自然吸收與利用。選擇 vitaC，您選擇的是一份對身體的尊重，一份回歸健康本質的承諾。我們以純粹的心，為您打造無負擔的健康體驗。
                     </p>
                     </div>
                 </div>
@@ -137,8 +137,8 @@
                     </div>
                     <div class="value-content">
                         <p>
-                            安心是 vitaC 對您的首要承諾。我們深知，保健食品的安全性至關重要，因此，我們從產品的源頭就開始嚴格把關。每一項原料的選擇，都經過仔細的評估與篩選，確保其來源的可靠性與安全性。我們與信譽良好的供應商合作，追溯原料的生產履歷，確保每一份原料都符合國際安全標準。
-
+                            安心是 vitaC 對您的首要承諾。我們深知，保健食品的安全性至關重要，因此，我們從產品的源頭就開始嚴格把關。每一項原料的選擇，都經過仔細的評估與篩選，確保其來源的可靠性與安全性。我們與信譽良好的供應商合作，追溯原料的生產履歷，確保每一份原料都符合國際安全標準。</br>
+                            </br>
                             在生產過程中，vitaC 採用嚴格的品質管理體系，遵循優良製造規範 (GMP) 的標準流程。從原料的檢驗、生產的監控，到成品的測試，每一個環節都力求精確與嚴謹，確保產品的純淨與安全。我們更定期將產品送至第三方公正單位進行檢驗，以確保其品質符合最高標準。選擇 vitaC，你選擇的是一份安心的保障，一份對健康的堅持。我們以嚴謹的態度，守護你與家人的健康。
                     </p>
                     </div>
@@ -153,9 +153,11 @@
                     </div>
                     <div class="value-content">
                         <p>
-                        專業是 vitaC 產品的核心價值。我們的產品研發團隊，由資深的營養師與健康科學專家組成，他們以最新的科學研究為基礎，結合豐富的實務經驗，打造出真正有益於健康的保健食品。
-
-                        vitaC 不僅提供優質的產品，更致力於傳遞正確的健康知識。我們的健康專欄與諮詢服務，由專業營養師團隊提供支持，為您解答保健疑問，提供個人化的健康建議。我們相信，透過專業的知識引導，能幫助您更了解自己的身體需求，做出明智的健康選擇。選擇 vitaC，您選擇的是一份專業的健康指引，一份以科學為本的信賴。我們以專業的知識，為您的健康保駕護航。
+                        專業是 vitaC 產品的核心價值。我們的產品研發團隊，由資深的營養師與健康科學專家組成，他們以最新的科學研究為基礎，結合豐富的實務經驗，打造出真正有益於健康的保健食品。</br>
+                        </br>
+                        vitaC 不僅提供優質的產品，更致力於傳遞正確的健康知識。我們的健康專欄與諮詢服務，由專業營養師團隊提供支持，為您解答保健疑問，提供個人化的健康建議。</br>
+                        </br>
+                        我們相信，透過專業的知識引導，能幫助您更了解自己的身體需求，做出明智的健康選擇。選擇 vitaC，您選擇的是一份專業的健康指引，一份以科學為本的信賴。我們以專業的知識，為您的健康保駕護航。
                     </p>
                     </div>
                 </div>
@@ -165,8 +167,9 @@
                 <div class="clean-label">
                     <img src="picture/about-us/clean-label.jpg" alt="">
                 </div>
-                <p>在琳瑯滿目的保健食品市場中，如何挑選真正安心、有效的產品，是每一位重視健康的消費者最關心的議題。vitaC 深知您的疑慮，因此，我們致力於追求卓越的品質與嚴謹的認證，為您的健康把關。其中，「小綠人」健康食品標章，便是您選擇 vitaC 保健食品時，最值得信賴的依據。
-
+                <p>在琳瑯滿目的保健食品市場中，如何挑選真正安心、有效的產品，是每一位重視健康的消費者最關心的議題。vitaC 深知您的疑慮，因此，我們致力於追求卓越的品質與嚴謹的認證，為您的健康把關。
+                    其中，「小綠人」健康食品標章，便是您選擇 vitaC 保健食品時，最值得信賴的依據。</br>
+                    </br>
                 「小綠人」標章不僅僅是一個圖案，它代表著台灣衛生福利部（TFDA）對該保健食品的嚴格審查與肯定。每一項獲得小綠人標章的產品，都必須經過科學實驗證明，證實其確實具有宣稱的保健功效，並且在安全性方面符合國家標準。這是一道道嚴謹的關卡，確保消費者所選購的，是真正對健康有益且安全的產品。
             </p>
             </div>
