--- a/customer-feedback-probiotics.html
+++ b/customer-feedback-probiotics.html
@@ -85,11 +85,12 @@
                 <div class="feedback-content">
                     <h1>vita C 綜合益生菌推薦 - 為了外食而運動的女子</h1>
                     <p>
-                        我今年27歲，平常給人的感覺是比較健康陽光型的女生，肌膚偏古銅色，喜歡戶外活動，也有固定運動的習慣。不過外表看起來健康歸健康，生活習慣其實有點失衡，最大的問題就是長期外食。不管是便當、自助餐還是速食，常常都是吃得快、挑得少，加上工作又忙，久了真的會覺得消化好像不太順，整個人有點脹、卡卡的感覺。
-
+                        我今年27歲，平常給人的感覺是比較健康陽光型的女生，肌膚偏古銅色，喜歡戶外活動，也有固定運動的習慣。不過外表看起來健康歸健康，生活習慣其實有點失衡，最大的問題就是長期外食。不管是便當、自助餐還是速食，常常都是吃得快、挑得少，加上工作又忙，久了真的會覺得消化好像不太順，整個人有點脹、卡卡的感覺。</br>
+                        </br>
                         我之前也有陸續吃過幾款益生菌，但有的成分太複雜，有的吃了沒什麼特別感覺，後來是在網路上看到 vitaC 這款益生菌，剛好有提到它的菌種選得比較簡單、單純，不會添加一堆我看不太懂的東西，這點就讓我蠻有好感。
 
-                        我自己是習慣每天睡前吃一包，粉末滿細緻的，味道帶一點微甜但不會過頭，也不會讓人有負擔感。吃了快一個月，我發現自己早上起床後的感受比較舒服一點，而且也比較不會有那種一整天肚子悶悶的狀況。雖然我知道這類產品還是要搭配飲食跟作息調整，但這段時間的體驗讓我覺得值得繼續吃看看。
+                        我自己是習慣每天睡前吃一包，粉末滿細緻的，味道帶一點微甜但不會過頭，也不會讓人有負擔感。吃了快一個月，我發現自己早上起床後的感受比較舒服一點，而且也比較不會有那種一整天肚子悶悶的狀況。</br>
+                        </br>雖然我知道這類產品還是要搭配飲食跟作息調整，但這段時間的體驗讓我覺得值得繼續吃看看。
 
                         另外我必須說，他們家的包裝風格我蠻喜歡的，不會太醫療感，拿出來補充的時候也覺得有點生活質感，這對我來說是個小加分（笑）。目前已經回購第二盒了！
                     </p>
