--- a/customer-feedback-vitaminb.html
+++ b/customer-feedback-vitaminb.html
@@ -87,10 +87,12 @@
                     <p>
                         我今年29歲，最近工作節奏非常緊湊，常常加班到很晚，早上又得準時到公司，連假日也常被各種進度追著跑。這樣長期下來，真的會覺得整個人像快沒電，精神提不起來，白天很容易分心、犯睏，氣色也顯得蠻疲累的。
 
-                        有次和朋友聊天聊到這件事，他說他之前也有一樣的狀況，後來開始補充 B 群，覺得幫助蠻大，推薦我可以試試看。我就找了網路上幾個牌子來看，最後選了 vitaC，除了看起來評價不錯，包裝設計我也蠻喜歡的，亮亮的配色擺在桌上感覺很有朝氣，看了心情也會變好一點。
+                        有次和朋友聊天聊到這件事，他說他之前也有一樣的狀況，後來開始補充 B 群，覺得幫助蠻大，推薦我可以試試看。</br>
+                        </br>
+                        我就找了網路上幾個牌子來看，最後選了 vitaC，除了看起來評價不錯，包裝設計我也蠻喜歡的，亮亮的配色擺在桌上感覺很有朝氣，看了心情也會變好一點。
                         
-                        我每天固定在早餐後吃一顆，大概吃了兩個星期左右，最近開始發現白天比較不會有那種「怎麼又想睡」的感覺，工作時也比較能集中精神。身邊同事也說我最近氣色看起來比之前好，不再像之前一臉沒睡飽。
-                        
+                        我每天固定在早餐後吃一顆，大概吃了兩個星期左右，最近開始發現白天比較不會有那種「怎麼又想睡」的感覺，工作時也比較能集中精神。身邊同事也說我最近氣色看起來比之前好，不再像之前一臉沒睡飽。</br>
+                        </br>
                         雖然我知道這種補充品還是要搭配作息和飲食一起調整，不過目前的體驗感覺蠻不錯的，也讓我更有意識去照顧自己的狀態。這陣子用完應該會再回購，算是目前生活裡一個小小但實用的日常配件！
                     </p>
                 </div>
