--- a/customer-feedback-vitaminc.html
+++ b/customer-feedback-vitaminc.html
@@ -85,12 +85,12 @@
                 <div class="feedback-content">
                     <h1>vitaC 綜合維他命c推薦 - 愛加班的文青上班族</h1>
                     <p>
-                        我今年33歲，是個很喜歡咖啡與閱讀的上班族。平常的生活節奏蠻忙碌的，白天在公司處理各種專案，晚上回家還是會忍不住打開筆電繼續處理瑣事。雖然很享受這樣充實的生活，但也慢慢發現自己有點過度消耗，像是氣色變得比較黯淡，整體精神狀態也常處於緊繃。
-
+                        我今年33歲，是個很喜歡咖啡與閱讀的上班族。平常的生活節奏蠻忙碌的，白天在公司處理各種專案，晚上回家還是會忍不住打開筆電繼續處理瑣事。雖然很享受這樣充實的生活，但也慢慢發現自己有點過度消耗，像是氣色變得比較黯淡，整體精神狀態也常處於緊繃。</br>
+                        </br>                  
                         因為不太習慣保養品用太多層，我開始轉向從營養補充的方式著手。朋友推薦我試試 vitaC 的維他命C，她說這款設計很簡單，不會有過多添加，而且體積不大、吞服上也不會有負擔，適合日常保養。
 
-                        我自己吃了一段時間後，真的有一些小小的感受。最明顯的是皮膚看起來比較有光澤，不會像之前那樣容易顯得疲倦，氣色整體來說比較自然一些。另外就是精神狀態，特別是在忙碌的時候，不會那麼容易感到倦怠，專注力也比較能維持。
-
+                        我自己吃了一段時間後，真的有一些小小的感受。最明顯的是皮膚看起來比較有光澤，不會像之前那樣容易顯得疲倦，氣色整體來說比較自然一些。另外就是精神狀態，特別是在忙碌的時候，不會那麼容易感到倦怠，專注力也比較能維持。</br>
+                        </br>
                         我平常是固定早餐後吃一顆，配著溫水，搭配一杯咖啡就是我一整天的起點儀式。這個小習慣雖然簡單，但卻讓我覺得有好好在照顧自己，不是為了追求立即的改變，而是希望日常的累積能慢慢養成穩定的狀態。
 
                         我會持續補充，也默默地把它推薦給幾個也一樣忙碌的女性朋友。我想，現代生活中，能找到適合自己的節奏與步調，是一種幸福。
