--- a/customer-feedback-whey.html
+++ b/customer-feedback-whey.html
@@ -85,10 +85,10 @@
                 <div class="feedback-content">
                     <h1>vita C 乳清蛋白推薦 - 巧克力口味愛好者</h1>
                     <p>
-                    我平常有在健身，大概每週重訓4次，飲食也會稍微注意蛋白質的攝取。以前都是靠雞胸肉或豆腐補充，但有時工作忙起來真的不太好準備。後來開始喝乳清蛋白，是同事推薦我試試 vitaC 的，說口味不錯、溶解快。
-
-                    我先試了巧克力口味，第一次喝就蠻驚訝的，不會有以前喝過那種粉感重或甜膩的問題。用搖搖杯搭常溫水，搖幾下就很均勻，運動完喝一杯很方便。後來也試過奶茶跟香草口味，奶茶的味道出乎意料自然，香草偏清爽，換著喝比較不會膩。
-
+                    我平常有在健身，大概每週重訓4次，飲食也會稍微注意蛋白質的攝取。以前都是靠雞胸肉或豆腐補充，但有時工作忙起來真的不太好準備。後來開始喝乳清蛋白，是同事推薦我試試 vitaC 的，說口味不錯、溶解快。</br>
+                    </br>
+                    我先試了巧克力口味，第一次喝就蠻驚訝的，不會有以前喝過那種粉感重或甜膩的問題。用搖搖杯搭常溫水，搖幾下就很均勻，運動完喝一杯很方便。後來也試過奶茶跟香草口味，奶茶的味道出乎意料自然，香草偏清爽，換著喝比較不會膩。</br>
+                    </br>
                     目前我都習慣在運動後30分鐘內補一杯，偶爾早餐來不及也會用乳清先頂一下。身體的感受上，覺得恢復速度還不錯，肌肉量也比較穩定成長。當然最重要的還是飲食和訓練要配合，不過乳清讓我整體更好掌握攝取量。
 
                     會持續回購，也有推薦給一起健身的朋友試試不同口味。
