--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col col-4">
                     <div class="card">
                         <div class="pic">
-                            <a href="probioticsproduct.html"><img src="picture/probioticsproduct.jpg" alt="綜合益生菌30包/盒"></a>
+                            <a href="probioticsproduct.html"><img src="picture/probioticsorange.jpg" alt="綜合益生菌30包/盒"></a>
                         </div>
                         <div class="txt">
                             <h3>vitaC 綜合益生菌(30包)</h3>
@@ -135,7 +135,7 @@
                 <div class="col col-4">
                     <div class="card">
                         <div class="pic">
-                            <img src="picture/fishoilproduct.jpg" alt="頂級魚油30粒/罐">
+                            <img src="picture/product-pic/fishoilpruduct-5.jpg" alt="頂級魚油30粒/罐">
                         </div>
                         <div class="txt">
                             <h3>vitaC 頂級魚油膠囊(30粒)</h3>
@@ -149,7 +149,7 @@
                 <div class="col col-4">
                     <div class="card">
                         <div class="pic">
-                            <img src="picture/luteinproduct.jpg" alt="金盞花葉黃素30粒/罐">
+                            <img src="picture/product-pic/lutienproduct-5.jpg" alt="金盞花葉黃素30粒/罐">
                         </div>
                         <div class="txt">
                             <h3>vitaC 金盞花葉黃素(30粒)</h3>
