--- a/cart-list.html
+++ b/cart-list.html
@@ -138,7 +138,7 @@
                         <span>結帳總額</span>
                         <span class="grand-total">NT$ <span id="cartGrandTotal">3480</span></span>
                     </div>
-                    <button class="checkout-btn">前往結帳</button>
+                    <a href=""><button class="checkout-btn">前往結帳</button>
                 </div>
             </div>
         </section>
