--- a/product-list-all.html
+++ b/product-list-all.html
@@ -65,6 +65,8 @@
                 </button>
         </header>
 <!-- nav-end -->
+ <!-- banner-start -->
+  <!--  banner-end -->
 <!-- breadcrumb -->
         <div class="breadcrumb" aria-label="breadcrumb">
             <ol>
@@ -73,7 +75,7 @@
             </ol>
         </div>
 <!-- breadcrumb-end -->
-        <section class="container">
+        <section class="container main">
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col col-3">
                     <div class="card product-list-card">
