--- a/product-list-whey.html
+++ b/product-list-whey.html
@@ -74,7 +74,7 @@
             </ol>
         </div>
 <!-- breadcrumb-end -->
-        <section class="container">
+        <section class="container main">
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col col-3">
                     <div class="card product-list-card">
