--- a/feedback-list.html
+++ b/feedback-list.html
@@ -73,7 +73,7 @@
             </ol>
         </div>
 <!-- breadcrumb-end -->
-        <section class="container">
+        <section class="container main">
             <div class="card-list">
             <a href="customer-feedback-vitaminb.html" class="card-link">
                 <div class="feedback-card">
