--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header class="main-header container-large">
             <div class="logo">
-                <a href="index.html"><img src="/picture/logo.png" alt=""></a>
+                <a href="index.html"><img src="picture/logo.png" alt=""></a>
             </div>
             <ul class="menu open hidden" id="mobileMenu">
                 <li><a href="aboutus.html">關於我們</a></li>
@@ -46,7 +46,7 @@
                                 </svg>
                             </button>
                 </div>
-                <a href="">
+                <a href="login.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 48 48"><path fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M24 20a7 7 0 1 0 0-14a7 7 0 0 0 0 14M6 40.8V42h36v-1.2c0-4.48 0-6.72-.872-8.432a8 8 0 0 0-3.496-3.496C35.92 28 33.68 28 29.2 28H18.8c-4.48 0-6.72 0-8.432.872a8 8 0 0 0-3.496 3.496C6 34.08 6 36.32 6 40.8"/>
                     </svg>
                 </a>
