購物車頁加登入連結

--- a/cart-list.html
+++ b/cart-list.html
@@ -146,7 +146,7 @@
                         <span>結帳總額</span>
                         <span class="grand-total">NT$ <span id="cartGrandTotal">3480</span></span>
                     </div>
-                    <a href=""><button class="checkout-btn">前往結帳</button>
+                    <a href="login.html"><button class="checkout-btn">前往結帳</button>
                 </div>
             </div>
         </section>
